Subida y descarga de fichero (aún no funcional)

--- a/myTfg/package.json
+++ b/myTfg/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.0",
     "@stomp/stompjs": "^7.0.0",
+    "downloadjs": "^1.4.7",
     "stompjs": "^2.3.3"
   }
 }
