--- a/myTfg/pom.xml
+++ b/myTfg/pom.xml
@@ -194,6 +194,12 @@
 		    <artifactId>junit</artifactId>
 		    <scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.7</version>
+		</dependency>
 	</dependencies>
 
 	<!-- ********************************************** -->
