--- a/myTfg/src/main/resources/application.yml
+++ b/myTfg/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     url: @dataSource.url@
     username: @dataSource.user@
     password: @dataSource.password@
-    driver-class-name: org.h2.Driver
+    driver-class-name: org.mariadb.jdbc.Driver
     max-active: 4
     max-idle: 2
     max-wait: 10000
